# EfficientNet-from-scratch

./: .gitignore  .todo.txt  CMakeLists.txt  README.md  _README.md  benchmark.cu  try  try.cu  try.old  try.py
src/: Benchmarks.cu  Kernels.cuh  Layers.cuh  Tests.cu  Utils.cuh  main.cpp
src/kernels/: Activation.cuh  Activations.cuh  BatchNorm.cuh  Clip.cuh  Convolution.cuh  Convolutions.cuh  CrossEntropy.cuh  DenseLayer.cuh  Elementwise.cuh  Helpers.cuh  Initialization.cuh  Loss.cuh  Optimizer.cuh  Pooling.cuh  Reduction.cuh  Resizing.cuh  Softmax.cuh  benchmarks.cu  tests.cu
src/layers/: Activation.cuh  ActivationLayer.cu  ActivationLayer.hpp  BatchNormLayer.cu  BatchNormLayer.hpp  Convolution.cuh  ConvolutionLayer.cu  ConvolutionLayer.hpp  DenseLayer.cu  DenseLayer.hpp  FirstLast.cuh  FlattenLayer.hpp  Layer.cuh  Layer.hpp  Linear.cuh  PoolingLayer.cu  PoolingLayer.hpp  Regularization.cuh  Resizing.cuh  SplitMerge.cuh
src/network/: Loss.cu  Loss.hpp  MBConv.cuh  Model.cu  Model.hpp  Network.cuh  Optimizer.cu  Optimizer.cuh  Optimizer.hpp
src/utils/: BlasUtils.hpp  CudaUtils.cu  CudaUtils.hpp  Exceptions.cuh  Helpers.cuh  ImageDirectoryIterator.cpp  ImageDirectoryIterator.hpp  Math.cuh  Measuring.cuh  Tensor.hpp  Utils.cuh
tools/: cifar10_converter.cpp
